--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -1,1 +1,7 @@
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/hk-grotesk" type="text/css"/>
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@aragonproject" />
+<meta name="twitter:creator" content="@aragonproject" />
+<meta name="twitter:description" content="Build unstoppable organizations on Ethereum" />
+<meta name="twitter:title" content="Aragon Forum" />
+<meta name="twitter:image" content="https://raw.githubusercontent.com/aragon/website/master/public/twitter-card-icon.png" />
