--- a/common/after_header.html
+++ b/common/after_header.html
@@ -1,3 +1,6 @@
+<script type="text/javascript">
+  document.getElementById("site-logo").src="https://theme-creator.discourse.org/uploads/default/original/2X/c/c2cd1774ae37c10746441b63d121afeebdeead2b.svg";
+</script>
 <div class="hero-container"></div>
 <div class="hero">
   <div>
