--- a/common/footer.html
+++ b/common/footer.html
@@ -3,7 +3,7 @@
   <div class="footer-container">
     <div class="footer-item mobile-full">
         <a href="https://aragon.org/">
-          <img class="logo-footer-img" src="https://blog.aragon.org/assets/logo-footer.svg" />
+          <img class="logo-footer-img" src="https://aws1.discourse-cdn.com/standard14/uploads/aragon/original/2X/7/7c69a262a99c3aa5c37942ea4ed506d8262c6f61.png" />
         </a>
     </div>
     <div class="footer-item">
