--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -1,6 +1,6 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@aragonproject" />
 <meta name="twitter:creator" content="@aragonproject" />
-<meta name="twitter:description" content="Build unstoppable organizations on Ethereum" />
+<meta name="twitter:description" content="Govern better, together. Learn about DAOs and launch your organization in minutes" />
 <meta name="twitter:title" content="Aragon Forum" />
-<meta name="twitter:image" content="https://raw.githubusercontent.com/aragon/website/master/public/twitter-card-icon.png" />
+<meta name="twitter:image" content="https://uploads-ssl.webflow.com/5e997428d0f2eb13a90aec8c/635283b535e03c60d5aafe64_logo_aragon_isotype.png" />
